--- a/about.html
+++ b/about.html
@@ -7,7 +7,12 @@
 </head>
 <body>
     <h1>Margarita</h1>
-    <p>I am currently working in an energy company. I started to study code 8 months ago adn Im really interested in working in the field</p>
+    <p>I moved to the UK 10 years ago as an adventure in order to improve the language and live the experience. 
+        I am currently working in an energy company. I started to study code 8 months ago and Im really interested in working in the field</p>
+        <p>I am extrovert and enthusiastic, always open to take and aport new ideas. 
+            I love travelling and learning different cultures.
+        </p>
+        <p>Fun fact: When I was 10, I won a competition in my town of telling jokes. </p>
     
 </body>
 <footer>
