--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
     <link rel="stylesheet" href="style.css">
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">MarIb</a>
+    <a class="navbar-brand" href="Marib.html">MarIb</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
         <a class="nav-link active" aria-current="page" href="#">Home</a>
-        <a class="nav-link" href="#">Workshops</a>
+        <a class="nav-link" href="workshops.html">Workshops</a>
         <a class="nav-link" href="about.html">About me</a>
         <a class="nav-link" href="resume.html">Resume</a>
     
