--- a/about.html
+++ b/about.html
@@ -4,16 +4,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About me </title>
+        <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
+   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+   <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Margarita</h1>
-    <p>I moved to the UK 10 years ago as an adventure in order to improve the language and live the experience. 
-        I am currently working in an energy company. I started to study code 8 months ago and Im really interested in working in the field</p>
+    <div class="container">
+        <div class="row">
+            <div class="col mt-5">
+                <div class="description">
+                      <p>I moved to the UK 10 years ago as an adventure in order to improve the language and live 
+                        the experience. 
+        I am currently working in an energy company. I started to study code 8 months ago and Im really interested 
+        in working in the field</p>
         <p>I am extrovert and enthusiastic, always open to take and aport new ideas. 
             I love travelling and learning different cultures.
         </p>
         <p>Fun fact: When I was 10, I won a competition in my town of telling jokes. </p>
-    
+                </div>
+            </div>
+            <div class="col mt-4">
+                <div class="photo">
+<img src="Selfie.jpg" alt="selfie"  class="img-fluid rounded">
+                </div>
+            </div>
+        </div>
+  
+    </div>
 </body>
 <footer>
     <a href="index.html">Back to homepage</a>
