--- a/index.html
+++ b/index.html
@@ -28,9 +28,22 @@
 </nav>
 </head>
 <body>
+    <div class="container">
     <h1>Margarita</h1>
     <h3>Junior developer</h3>
-<p>I have studied with she codes </p>
+    </div>
+<p> </p>
 
 </body>
+
+      <footer id="social-media">
+    <i class="fa-brands fa-facebook facebook-icon"></i>
+    <i class="fa-brands fa-square-instagram instagram-icon"></i>
+    <i class="fa-solid fa-envelope email-icon"></i>
+  </footer>
+
+        
+    
+   
+
 </html>
