--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html lang="en">
 <head>
        <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+         <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <title>Font Awesome Example</title>
    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
@@ -27,23 +31,98 @@
   </div>
 </nav>
 </head>
-<body>
-    <div class="container">
-    <h1>Margarita</h1>
-    <h3>Junior developer</h3>
+ <div class="hero">
+      <p>👋 Hi, I am</p>
+      <h1>Margarita Ibáñez</h1>
+      <h3 class="mb-5">SheCodes student based in 💂‍♀️UK</h3>
+      <div>
+        <a
+          href="index.html#social-media"
+          class="btn btn-primary"
+          title="Contact information on social media"
+          >Contact me</a
+        >
+      </div>
     </div>
-<p> </p>
+    <p class="text-center m-5 text-muted">
+      What I have learnt on SheCodes so far
+    </p>
+    <div class="container">
+      <div class="row">
+        <div class="col mt-4">
+          <div class="project-description">
+            <h2 class="mb-5">Yoga app</h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Perferendis quia, dignissimos nam ratione veniam quibusdam porro
+              omnis quam vel eos eveniet alias temporibus deserunt veritatis
+              minima fugiat explicabo eum dolore.
+            </p>
+            <a href="" class="btn btn-secondary">Learn more</a>
+          </div>
+        </div>
+        <div class="col mt-4 d-none d-lg-block">
+          <img
+            src="images/yoga (1).png"
+            alt="Yoga photo"
+            class="img-fluid rounded"
+          />
+        </div>
+      </div>
 
-</body>
+      <div class="row">
+        <div class="col mt-4 d-none d-lg-block">
+          <img
+            src="images/Cheese.JPG"
+            alt="Cheese project"
+            class="img-fluid rounded"
+          />
+        </div>
 
-      <footer id="social-media">
-    <i class="fa-brands fa-facebook facebook-icon"></i>
-    <i class="fa-brands fa-square-instagram instagram-icon"></i>
+        <div class="col mt-4">
+          <div class="project-description">
+            <h2 class="mb-5">Cheese</h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Perferendis quia, dignissimos nam ratione veniam quibusdam porro
+              omnis quam vel eos eveniet alias temporibus deserunt veritatis
+              minima fugiat explicabo eum dolore.
+            </p>
+            <a href="" class="btn btn-secondary">Learn more</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col mt-4">
+          <div class="project-description">
+            <h2 class="mb-5">Weather app</h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Perferendis quia, dignissimos nam ratione veniam quibusdam porro
+              omnis quam vel eos eveniet alias temporibus deserunt veritatis
+              minima fugiat explicabo eum dolore.
+            </p>
+            <a href="" class="btn btn-secondary">Learn more</a>
+          </div>
+        </div>
+        <div class="col mt-4 d-none d-lg-block">
+          <img
+            src="images/Meteo app.jpg"
+            alt="Weather app"
+            class="img-fluid rounded"
+          />
+        </div>
+      </div>
+    </div>
+  </body>
+
+  <footer id="social-media"> Contact me: 
+    <div class="icons">
+    <i class="fa-brands fa-github github-icon"></i>
+  <i class="fa-brands fa-linkedin linkedin-icon"></i>
     <i class="fa-solid fa-envelope email-icon"></i>
+    </div>
   </footer>
-
-        
-    
-   
-
 </html>
+
