--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
             </div>
             <div class="col mt-4">
                 <div class="photo">
-<img src="Selfie.jpg" alt="selfie"  class="img-fluid rounded">
+<img src="/images/Selfie.jpg" alt="selfie"  class="img-fluid rounded">
                 </div>
             </div>
         </div>
