--- a/Marib.html
+++ b/Marib.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MarIb</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
    <h3>Margarita Ibáñez Ramírez</h3> 
@@ -12,8 +13,7 @@
 
       <li>Date of birth: 13/03/1988</li>
        <li>Current location: Brighton, UK</li>
-        <li></li>
-         <li></li>
+        
 
 
 </ul>
