--- a/index.html
+++ b/index.html
@@ -5,11 +5,8 @@
          <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <title>Font Awesome Example</title>
-   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
-   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <meta charset="UTF-8">
+
+   
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Margarita Ibáñez Ramírez</title>
     <link rel="stylesheet" href="style.css">
@@ -34,7 +31,7 @@
  <div class="hero">
       <p>👋 Hi, I am</p>
       <h1>Margarita Ibáñez</h1>
-      <h3 class="mb-5">SheCodes student based in 💂‍♀️UK</h3>
+      <h3 class="mb-5">Junior front-end developer</h3>
       <div>
         <a
           href="index.html#social-media"
@@ -45,31 +42,11 @@
       </div>
     </div>
     <p class="text-center m-5 text-muted">
-      What I have learnt on SheCodes so far
+      Below a couple of project I have worked on
     </p>
     <div class="container">
-      <div class="row">
-        <div class="col mt-4">
-          <div class="project-description">
-            <h2 class="mb-5">Yoga app</h2>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Perferendis quia, dignissimos nam ratione veniam quibusdam porro
-              omnis quam vel eos eveniet alias temporibus deserunt veritatis
-              minima fugiat explicabo eum dolore.
-            </p>
-            <a href="" class="btn btn-secondary">Learn more</a>
-          </div>
-        </div>
-        <div class="col mt-4 d-none d-lg-block">
-          <img
-            src="images/yoga (1).png"
-            alt="Yoga photo"
-            class="img-fluid rounded"
-          />
-        </div>
-      </div>
 
+      
       <div class="row">
         <div class="col mt-4 d-none d-lg-block">
           <img
@@ -83,12 +60,9 @@
           <div class="project-description">
             <h2 class="mb-5">Cheese</h2>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Perferendis quia, dignissimos nam ratione veniam quibusdam porro
-              omnis quam vel eos eveniet alias temporibus deserunt veritatis
-              minima fugiat explicabo eum dolore.
+               A description of the cheese and a link of th best pair ups cheese and wine 
             </p>
-            <a href="" class="btn btn-secondary">Learn more</a>
+            <a href="file:///C:/Users/USUARIO/Desktop/SheCodes/BASICS/Project/Project%20Margarita.html" class="btn btn-secondary" target="_blank">Learn more</a>
           </div>
         </div>
       </div>
@@ -98,12 +72,9 @@
           <div class="project-description">
             <h2 class="mb-5">Weather app</h2>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Perferendis quia, dignissimos nam ratione veniam quibusdam porro
-              omnis quam vel eos eveniet alias temporibus deserunt veritatis
-              minima fugiat explicabo eum dolore.
+             Weather app where we can see the current weather in any city and on hte following 5 days. 
             </p>
-            <a href="" class="btn btn-secondary">Learn more</a>
+            <a href="file:///C:/Users/USUARIO/Desktop/SheCodes/PLUS/Plus%20Week%208/index.html" class="btn btn-secondary" target="_blank">Learn more</a>
           </div>
         </div>
         <div class="col mt-4 d-none d-lg-block">
@@ -119,9 +90,9 @@
 
   <footer id="social-media"> Contact me: 
     <div class="icons">
-    <i class="fa-brands fa-github github-icon"></i>
-  <i class="fa-brands fa-linkedin linkedin-icon"></i>
-    <i class="fa-solid fa-envelope email-icon"></i>
+   <a href="https://github.com/Margarita827" target="_blank"> <i class="fa-brands fa-github github-icon"></i></a>
+ <a href="https://www.linkedin.com/in/margaritaibanez/" target="_blank"> <i class="fa-brands fa-linkedin linkedin-icon"></i></a>
+  <a href="mailto:studentmargarita72@gmail.com">  <i class="fa-solid fa-envelope email-icon"></i></a>
     </div>
   </footer>
 </html>
