--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
           <div class="project-description">
             <h2 class="mb-5">Weather app</h2>
             <p>
-             Weather app where we can see the current weather in any city and on hte following 5 days. 
+             Weather app where we can see the current weather in any city and on THe following 5 days. 
             </p>
             <a href="file:///C:/Users/USUARIO/Desktop/SheCodes/PLUS/Plus%20Week%208/index.html" class="btn btn-secondary" target="_blank">Learn more</a>
           </div>
