--- a/resume.html
+++ b/resume.html
@@ -104,9 +104,17 @@ Medium level verbal skills
     </div>
 
 
+    <div class="mt-5">
 
 
+<h4 class="resume ml-3">My resume</h4>
+<p>Check my official CV</p>
+<div class="cv_link">
+       <a href="\Users\USUARIO\Desktop\Margui\CV\CV\Margarita Ibáñez 2024.pdf" target="_blank"><i class="fa-regular fa-file"></i></a>
 
+</div>
+
+</div>
 
  
 
